updated links page

--- a/hugo-blox/blox/hero-author.html
+++ b/hugo-blox/blox/hero-author.html
@@ -65,11 +65,11 @@
         {{ else if in (slice "http" "https") $scheme }}
         {{ end }}
       <div class="mt-10 flex items-center justify-center gap-x-6 pb-8">
-        <a href="{{ $link | safeURL }}" {{ $target | safeHTMLAttr }} class="rounded-md bg-primary-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-primary-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">
-          {{ $block.content.primary_action.text | markdownify | emojify }}
+        <a href="{{ $link | safeURL }}" {{ $target | safeHTMLAttr }} class="inline-flex items-center justify-center gap-3 rounded-md bg-primary-600 px-6 py-5 text-lg font-semibold text-white shadow-sm hover:bg-primary-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600" style="max-width: 75%;">
           {{ with $block.content.primary_action.icon }}
-            {{ partial "functions/get_icon" (dict "name" . "attributes" "style=\"height: 1em\" class='inline-block pl-2'") }}
+            {{ partial "functions/get_icon" (dict "name" . "attributes" "style=\"height: 1.5em; width: 1.5em;\" class='inline-block flex-shrink-0'") }}
           {{ end }}
+          <span>{{ $block.content.primary_action.text | markdownify | emojify }}</span>
         </a>
         {{end}}
 
